[project]
name = "adpeted_correlation_clustering_CORAD"
version = "0.0.1"
authors = [
  { name="Edinio Zacko", email="morenzack@gmail.com" },
]
description = "A package for adapted correlation clustering"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gbazack/clusteringAPI"
"Bug Tracker" = "https://github.com/gbazack/clusteringAPI/issues"